feat(electron-reducer): add electron reducer

--- a/projects/core/tsconfig.electron.compile.json
+++ b/projects/core/tsconfig.electron.compile.json
@@ -27,7 +27,8 @@
   },
   "files": [
     "./public_api.ts",
-    "./nodejs/public_api.ts"
+    "./nodejs/public_api.ts",
+    "./electron/public_api.ts"
   ],
   "exclude": [
     "dist",
