--- a/projects/studio-renderer/tsconfig.json
+++ b/projects/studio-renderer/tsconfig.json
@@ -30,7 +30,8 @@
       "@muzika/core/browser": ["../core/browser/public_api.ts"],
       "@muzika/core/nodejs": [
         "../core/nodejs/public_api.ts"
-      ]
+      ],
+      "@muzika/core/electron": ["../core/electron/index.ts"]
     }
   },
   "exclude": [
