--- a/projects/studio-main/package.json
+++ b/projects/studio-main/package.json
@@ -23,6 +23,7 @@
     "crypto-browserify": "^3.12.0",
     "deserialize-error": "0.0.3",
     "electron-is-dev": "^0.3.0",
+    "electron-redux": "^1.3.1",
     "electron-updater": "^3.0.3",
     "eth-sig-util": "^1.4.2",
     "ethereumjs-abi": "^0.6.5",
