--- a/projects/studio-renderer/package.json
+++ b/projects/studio-renderer/package.json
@@ -27,6 +27,7 @@
     "buffer": "^5.1.0",
     "chalk": "^2.4.1",
     "deserialize-error": "0.0.3",
+    "electron-redux": "^1.3.1",
     "eth-sig-util": "^1.4.2",
     "ethereumjs-abi": "^0.6.5",
     "ethereumjs-util": "^5.2.0",
