--- a/projects/core/electron/tsconfig.json
+++ b/projects/core/electron/tsconfig.json
@@ -20,7 +20,10 @@
       "es2016",
       "es2015",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@muzika/core": ["../public_api.ts"]
+    }
   },
   "exclude": [
     "src/test.ts",
