--- a/package.json
+++ b/package.json
@@ -57,17 +57,17 @@
   "nodeGypRebuild": "true",
   "dependencies": {
     "@angular-redux/store": "^9.0.0",
-    "@angular/animations": "^6.0.9",
-    "@angular/cdk": "^6.4.0",
-    "@angular/common": "^6.0.9",
-    "@angular/compiler": "^6.0.9",
-    "@angular/core": "^6.0.9",
-    "@angular/forms": "^6.0.9",
-    "@angular/http": "^6.0.9",
-    "@angular/material": "^6.4.0",
-    "@angular/platform-browser": "^6.0.9",
-    "@angular/platform-browser-dynamic": "^6.0.9",
-    "@angular/router": "^6.0.9",
+    "@angular/animations": "^6.1.4",
+    "@angular/cdk": "^6.4.6",
+    "@angular/common": "^6.1.4",
+    "@angular/compiler": "^6.1.4",
+    "@angular/core": "^6.1.4",
+    "@angular/forms": "^6.1.4",
+    "@angular/http": "^6.1.4",
+    "@angular/material": "^6.4.6",
+    "@angular/platform-browser": "^6.1.4",
+    "@angular/platform-browser-dynamic": "^6.1.4",
+    "@angular/router": "^6.1.4",
     "@angularclass/hmr": "^2.1.3",
     "@ionic-native/core": "^5.0.0-beta.14",
     "@ionic-native/native-storage": "^5.0.0-beta.14",
@@ -120,7 +120,7 @@
     "hash.js": "^1.1.5",
     "hls.js": "^0.9.1",
     "imagemagick": "^0.1.3",
-    "ipfs-api": "^22.2.4",
+    "ipfs-api": "^22.3.0",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.0.1",
     "ngx-uploader": "^6.0.1",
@@ -165,14 +165,14 @@
     "command-line-args": "^5.0.2",
     "cross-env": "^5.1.6",
     "devtron": "^1.4.0",
-    "electron": "2.0.5",
+    "electron": "^2.0.8",
     "electron-builder": "20.25.0",
     "electron-reload": "1.2.5",
     "jasmine-core": "^3.1.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^2.0.4",
+    "karma": "~1.7.1",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.4.3",
+    "karma-coverage-istanbul-reporter": "~2.0.2",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "lerna": "^2.11.0",
