--- a/package.json
+++ b/package.json
@@ -144,11 +144,11 @@
   "devDependencies": {
     "@0xproject/types": "^0.6.1",
     "@0xproject/typescript-typings": "^0.3.2",
-    "@angular-devkit/build-angular": "^0.7.0-rc.3",
-    "@angular-devkit/build-ng-packagr": "^0.7.0-rc.3",
-    "@angular/cli": "^6.1.0-rc.3",
-    "@angular/compiler-cli": "^6.1.0-rc.0",
-    "@angular/language-service": "^6.1.0-rc.0",
+    "@angular-devkit/build-angular": "^0.7.5",
+    "@angular-devkit/build-ng-packagr": "^0.7.5",
+    "@angular/cli": "^6.1.5",
+    "@angular/compiler-cli": "^6.1.4",
+    "@angular/language-service": "^6.1.4",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "~8.9.4",
