--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "build:intro": "ng build muzika-intro -c production",
     "electron:tsc": "npm run tsc:core && npm run tsc:studio-main",
     "electron:ready": "npx electron-builder install-app-deps",
-    "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:tsc && electron projects/studio-main --serve --debug --inspect=5858",
+    "electron:serve": "wait-on http-get://localhost:4200/ && electron projects/studio-main/index.js --serve --debug --verbose --inspect=5858",
     "electron:build": "lerna run --stream --scope muzika-studio-main build",
     "electron:publish": "lerna run --stream --scope muzika-studio-main publish",
     "preelectron:dev": "cross-env ENV=dev node hooks/set_environments.js",
@@ -79,6 +79,8 @@
     "@ledgerhq/hw-transport-u2f": "^4.20.0",
     "@ledgerhq/web3-subprovider": "^4.20.0",
     "@muzika/core": "0.0.8",
+    "@ngrx/effects": "^6.1.0",
+    "@ngrx/store": "^6.1.0",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "aes-js": "^3.1.1",
