--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:studio": "npm run postinstall && cross-env ENV=dev node hooks/set_environments.js && npm-run-all -p serve:studio-renderer electron:serve",
     "start:studio:stage": "npm run postinstall && cross-env ENV=stage node hooks/set_environments.js && npm-run-all -p serve:studio-renderer:stage electron:serve",
     "ss": "npm run start:studio",
-    "sss": "npm run electron:tsc && npm run start:studio:stage",
+    "sss": "npm run start:studio:stage",
     "serve:studio-renderer": "ng serve muzika-studio-renderer --hmr",
     "serve:studio-renderer:stage": "npm run serve:studio-renderer -- -c stage",
     "start:web": "npm run postinstall:web && ng serve muzika-web -o --hmr --port 4300 --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
@@ -21,17 +21,15 @@
     "start:web:prod": "npm run start:web -- -c production",
     "sw": "npm run start:web",
     "sws": "npm run start:web:stage",
-    "tsc:core": "tsc -p projects/core/tsconfig.electron.compile.json && npm link projects/core/",
     "tsc:studio-main": "node hooks/symlink_node_modules.js && tsc -p projects/studio-main/tsconfig.build.json",
     "build:core": "ng build muzika-core",
-    "build:studio": "npm run postinstall && npm run electron:tsc && ng build muzika-studio-renderer",
+    "build:studio": "npm run postinstall && ng build muzika-studio-renderer",
     "build:studio:stage": "npm run build:studio -- -c stage",
     "build:studio:prod": "npm run build:studio -- -c production",
     "build:web": "npm run postinstall:web && ng build muzika-web",
     "build:web:stage": "npm run build:web -- -c stage",
     "build:web:prod": "npm run build:web -- -c production",
     "build:intro": "ng build muzika-intro -c production",
-    "electron:tsc": "npm run tsc:core && npm run tsc:studio-main",
     "electron:ready": "npx electron-builder install-app-deps",
     "electron:serve": "wait-on http-get://localhost:4200/ && electron projects/studio-main/index.js --serve --debug --verbose --inspect=5858",
     "electron:build": "lerna run --stream --scope muzika-studio-main build",
