--- a/projects/studio-renderer/package.json
+++ b/projects/studio-renderer/package.json
@@ -36,6 +36,7 @@
     "froala-editor": "2.8.1",
     "fs-extra": "^5.0.0",
     "hls.js": "^0.9.1",
+    "ipfs-api": "^22.3.0",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.0.1",
     "ngx-uploader": "^6.0.2",
