feat(electron-compile): use prebuilt electron for typescript/ts-node

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build:web:prod": "npm run build:web -- -c production",
     "build:intro": "ng build muzika-intro -c production",
     "electron:ready": "npx electron-builder install-app-deps",
-    "electron:serve": "wait-on http-get://localhost:4200/ && electron projects/studio-main/index.js --serve --debug --verbose --inspect=5858",
+    "electron:serve": "wait-on http-get://localhost:4200/ && electron projects/studio-main/es6-init.js --serve --debug --verbose --inspect=5858",
     "electron:build": "lerna run --stream --scope muzika-studio-main build",
     "electron:publish": "lerna run --stream --scope muzika-studio-main publish",
     "preelectron:dev": "cross-env ENV=dev node hooks/set_environments.js",
@@ -165,9 +165,10 @@
     "command-line-args": "^5.0.2",
     "cross-env": "^5.1.6",
     "devtron": "^1.4.0",
-    "electron": "^2.0.8",
-    "electron-builder": "20.25.0",
-    "electron-reload": "1.2.5",
+    "electron": "2.0.7",
+    "electron-builder": "^20.28.3",
+    "electron-prebuilt-compile": "^2.0.7",
+    "electron-reload": "^1.2.5",
     "jasmine-core": "^3.1.0",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "~1.7.1",
