refactor: change to run electron by typescript (in progress)

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,8 @@ ipfs-muzika/
 app-builds/
 main.js
 projects/studio-main/node_src/**/*.js
+projects/studio-main/renderer
+projects/studio-main/.cache
 
 platforms/
 plugins/
