--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
     "sws": "npm run start:web:stage",
     "tsc:studio-main": "node hooks/symlink_node_modules.js && tsc -p projects/studio-main/tsconfig.build.json",
     "build:core": "ng build muzika-core",
-    "build:studio": "npm run postinstall && ng build muzika-studio-renderer",
+    "build:studio": "npm run postinstall && ng build muzika-studio-renderer -c production",
     "build:studio:stage": "npm run build:studio -- -c stage",
     "build:studio:prod": "npm run build:studio -- -c production",
     "build:web": "npm run postinstall:web && ng build muzika-web",
     "build:web:stage": "npm run build:web -- -c stage",
     "build:web:prod": "npm run build:web -- -c production",
     "build:intro": "ng build muzika-intro -c production",
-    "electron:ready": "npx electron-builder install-app-deps",
+    "electron:compile": "cd projects/studio-main && electron-compile --appdir `pwd` .",
+    "electron:ready": "npx electron-builder install-app-deps && npm link projects/core",
     "electron:serve": "wait-on http-get://localhost:4200/ && electron projects/studio-main/es6-init.js --serve --debug --verbose --inspect=5858",
     "electron:build": "lerna run --stream --scope muzika-studio-main build",
     "electron:publish": "lerna run --stream --scope muzika-studio-main publish",
@@ -152,6 +153,10 @@
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "~8.9.4",
+    "babel-preset-es2016-node5": "^1.1.2",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -167,6 +172,8 @@
     "devtron": "^1.4.0",
     "electron": "2.0.7",
     "electron-builder": "^20.28.3",
+    "electron-compile": "^6.4.3",
+    "electron-compilers": "^5.9.0",
     "electron-prebuilt-compile": "^2.0.7",
     "electron-reload": "^1.2.5",
     "jasmine-core": "^3.1.0",
