--- a/projects/studio-main/package.json
+++ b/projects/studio-main/package.json
@@ -22,6 +22,7 @@
     "command-exists": "^1.2.7",
     "crypto-browserify": "^3.12.0",
     "deserialize-error": "0.0.3",
+    "electron-compile": "^6.4.3",
     "electron-is-dev": "^0.3.0",
     "electron-redux": "^1.3.1",
     "electron-updater": "^3.0.3",
@@ -58,6 +59,11 @@
   },
   "devDependencies": {
     "devtron": "^1.4.0",
-    "electron": "2.0.8"
+    "electron": "2.0.7",
+    "electron-compilers": "^5.9.0",
+    "babel-preset-es2016-node5": "^1.1.2",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0"
   }
 }
