WIP: refactor(studio-main): change build process to shell script (add import path resolver)

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "sws": "npm run start:web:stage",
     "tsc:studio-main": "node hooks/symlink_node_modules.js && tsc -p projects/studio-main/tsconfig.build.json",
     "build:core": "ng build muzika-core",
-    "build:studio": "npm run postinstall && ng build muzika-studio-renderer -c production",
+    "build:studio": "npm run postinstall && ng build muzika-studio-renderer",
     "build:studio:stage": "npm run build:studio -- -c stage",
     "build:studio:prod": "npm run build:studio -- -c production",
     "build:web": "npm run postinstall:web && ng build muzika-web",
@@ -77,7 +77,6 @@
     "@ionic/storage": "^2.1.3",
     "@ledgerhq/hw-transport-u2f": "^4.20.0",
     "@ledgerhq/web3-subprovider": "^4.20.0",
-    "@muzika/core": "0.0.8",
     "@ngrx/effects": "^6.1.0",
     "@ngrx/store": "^6.1.0",
     "@ngx-translate/core": "^10.0.2",
@@ -121,6 +120,7 @@
     "hash.js": "^1.1.5",
     "hls.js": "^0.9.1",
     "imagemagick": "^0.1.3",
+    "ipfs": "^0.31.7",
     "ipfs-api": "^22.3.0",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.0.1",
