--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build:web:prod": "npm run build:web -- -c production",
     "build:intro": "ng build muzika-intro -c production",
     "electron:compile": "cd projects/studio-main && electron-compile --appdir `pwd` .",
-    "electron:ready": "npx electron-builder install-app-deps && npm link projects/core",
+    "electron:ready": "npx electron-builder install-app-deps && npm link projects/core && npm link @muzika/core",
     "electron:serve": "wait-on http-get://localhost:4200/ && electron projects/studio-main/es6-init.js --serve --debug --verbose --inspect=5858",
     "electron:build": "lerna run --stream --scope muzika-studio-main build",
     "electron:publish": "lerna run --stream --scope muzika-studio-main publish",
@@ -77,6 +77,7 @@
     "@ionic/storage": "^2.1.3",
     "@ledgerhq/hw-transport-u2f": "^4.20.0",
     "@ledgerhq/web3-subprovider": "^4.20.0",
+    "@muzika/core": "*",
     "@ngrx/effects": "^6.1.0",
     "@ngrx/store": "^6.1.0",
     "@ngx-translate/core": "^10.0.2",
@@ -153,12 +154,12 @@
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "~8.9.4",
-    "babel-preset-es2016-node5": "^1.1.2",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016-node5": "^1.1.2",
     "babel-preset-stage-2": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0",
@@ -170,7 +171,7 @@
     "command-line-args": "^5.0.2",
     "cross-env": "^5.1.6",
     "devtron": "^1.4.0",
-    "electron": "2.0.7",
+    "electron": "^2.0.8",
     "electron-builder": "^20.28.3",
     "electron-compile": "^6.4.3",
     "electron-compilers": "^5.9.0",
