--- a/projects/core/common/tsconfig.json
+++ b/projects/core/common/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": "./",
     "outDir": "../../out-tsc/app",
     "sourceMap": false,
-    "declaration": true,
+    "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
