--- a/package.json
+++ b/package.json
@@ -130,7 +130,8 @@
     "popper.js": "^1.14.3",
     "raven-js": "^3.26.4",
     "redux": "^4.0.0",
-    "rxjs": "^6.3.2",
+    "rxjs": "6.2.0",
+    "rxjs-compat": "6.2.0",
     "safe-buffer": "^5.1.2",
     "serialize-error": "^2.1.0",
     "stream-browserify": "^2.0.1",
