--- a/projects/studio-main/package.json
+++ b/projects/studio-main/package.json
@@ -43,7 +43,8 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "redux": "^4.0.0",
-    "rxjs": "^6.3.2",
+    "rxjs": "6.2.0",
+    "rxjs-compat": "6.2.0",
     "safe-buffer": "^5.1.2",
     "serialize-error": "^2.1.0",
     "stream-browserify": "^2.0.1",
