--- a/projects/studio-renderer/package.json
+++ b/projects/studio-renderer/package.json
@@ -42,7 +42,8 @@
     "ngx-uploader": "^6.0.2",
     "popper.js": "^1.14.3",
     "redux": "^4.0.0",
-    "rxjs": "^6.3.2",
+    "rxjs": "6.2.0",
+    "rxjs-compat": "6.2.0",
     "safe-buffer": "^5.1.2",
     "serialize-error": "^2.1.0",
     "stream-browserify": "^2.0.1",
