--- a/package.json
+++ b/package.json
@@ -27,25 +27,25 @@
   "nodeGypRebuild": "true",
   "dependencies": {
     "@angular-redux/store": "^9.0.0",
-    "@angular/animations": "^6.1.6",
+    "@angular/animations": "^6.1.7",
     "@angular/cdk": "^6.4.7",
-    "@angular/common": "^6.1.6",
-    "@angular/compiler": "^6.1.6",
-    "@angular/core": "^6.1.6",
-    "@angular/forms": "^6.1.6",
-    "@angular/http": "^6.1.6",
+    "@angular/common": "^6.1.7",
+    "@angular/compiler": "^6.1.7",
+    "@angular/core": "^6.1.7",
+    "@angular/forms": "^6.1.7",
+    "@angular/http": "^6.1.7",
     "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^6.1.6",
-    "@angular/platform-browser-dynamic": "^6.1.6",
-    "@angular/router": "^6.1.6",
+    "@angular/platform-browser": "^6.1.7",
+    "@angular/platform-browser-dynamic": "^6.1.7",
+    "@angular/router": "^6.1.7",
     "@angularclass/hmr": "^2.1.3",
-    "@ionic-native/core": "^5.0.0-beta.14",
-    "@ionic-native/native-storage": "^5.0.0-beta.14",
-    "@ionic-native/splash-screen": "^5.0.0-beta.14",
-    "@ionic-native/status-bar": "^5.0.0-beta.14",
-    "@ionic/angular": "^4.0.0-alpha.11",
-    "@ionic/schematics-angular": "^1.0.0-testing.fa20842b",
-    "@ionic/storage": "^2.1.3",
+    "@ionic-native/core": "^5.0.0-beta.17",
+    "@ionic-native/native-storage": "^5.0.0-beta.17",
+    "@ionic-native/splash-screen": "^5.0.0-beta.17",
+    "@ionic-native/status-bar": "^5.0.0-beta.17",
+    "@ionic/angular": "^4.0.0-beta.8",
+    "@ionic/schematics-angular": "^1.0.6",
+    "@ionic/storage": "^2.2.0",
     "@ledgerhq/hw-transport-u2f": "^4.20.0",
     "@ledgerhq/web3-subprovider": "^4.20.0",
     "@muzika/core": "*",
@@ -90,10 +90,10 @@
     "ipfs-api": "^22.3.0",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.0.1",
-    "ngx-uploader": "^6.0.1",
+    "ngx-uploader": "^6.0.4",
     "particles.js": "^2.0.0",
     "popper.js": "^1.14.3",
-    "raven-js": "^3.26.4",
+    "raven-js": "^3.27.0",
     "redux": "^4.0.0",
     "rxjs": "6.2.0",
     "rxjs-compat": "6.2.0",
@@ -114,9 +114,9 @@
     "@0xproject/typescript-typings": "^0.3.2",
     "@angular-devkit/build-angular": "^0.7.5",
     "@angular-devkit/build-ng-packagr": "^0.7.5",
-    "@angular/cli": "^6.1.5",
-    "@angular/compiler-cli": "^6.1.6",
-    "@angular/language-service": "^6.1.6",
+    "@angular/cli": "^6.2.1",
+    "@angular/compiler-cli": "^6.1.7",
+    "@angular/language-service": "^6.1.7",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "~8.9.4",
@@ -140,7 +140,7 @@
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "~1.7.1",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.2",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "lerna": "^2.11.0",
@@ -148,7 +148,7 @@
     "npm-run-all": "^4.1.3",
     "npx": "10.2.0",
     "prettier": "^1.13.7",
-    "protractor": "^5.4.0",
+    "protractor": "^5.4.1",
     "replace": "^1.0.0",
     "solium": "git+https://github.com/duaraghav8/Solium.git#develop",
     "truffle": "^4.1.13",
@@ -156,7 +156,7 @@
     "ts-node": "^6.2.0",
     "tslint": "^5.11.0",
     "typescript": "2.7.2",
-    "wait-on": "^2.1.0",
+    "wait-on": "^2.1.2",
     "webpack-cli": "^2.1.5"
   },
   "cordova": {
