--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,11 +76,13 @@ deploy:stage:
   image: python:3.6
   stage: deploy
   before_script:
+    - apt-get update && apt-get install -y zip
     - python -m pip install awscli
   script:
-    - aws s3 sync ./dist/intro/ s3://$AWS_BUCKET --delete
-    - aws cloudfront create-invalidation --distribution-id $CDN_DISTRIBUTION_ID --paths "/index.html" "/assets/i18n/*" "/assets/*.pdf"
-    - aws cloudfront create-invalidation --distribution-id $CDN_DISTRIBUTION_ID_2 --paths "/index.html" "/assets/i18n/*" "/assets/*.pdf"
+    - sh ./scripts/elb-deploy.sh
+#    - aws s3 sync ./dist/intro/ s3://$AWS_BUCKET --delete
+#    - aws cloudfront create-invalidation --distribution-id $CDN_DISTRIBUTION_ID --paths "/index.html" "/assets/i18n/*" "/assets/*.pdf"
+#    - aws cloudfront create-invalidation --distribution-id $CDN_DISTRIBUTION_ID_2 --paths "/index.html" "/assets/i18n/*" "/assets/*.pdf"
   only:
     - master
   tags:
