--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "description": "Decentralized Music platform",
   "scripts": {
     "ng": "ng",
+    "start": "pm2 start ecosystem.config.js --env production && pm2 logs",
+    "start:stage": "pm2 start ecosystem.config.js && pm2 logs",
     "start:web": "ng serve muzika-web -o --hmr --port 4300 --ssl --ssl-key ssl/server.key --ssl-cert ssl/server.crt",
     "start:web:stage": "npm run start:web -- -c stage",
     "start:web:prod": "npm run start:web -- -c production",
@@ -16,7 +18,11 @@
     "build:web": "ng build muzika-web",
     "build:web:stage": "npm run build:web -- -c stage",
     "build:web:prod": "npm run build:web -- -c production",
-    "build:intro": "ng build muzika-intro -c production",
+    "build:intro": "npm run build:intro:client && npm run build:intro:server && npm run build:intro:webpack",
+    "build:intro:client": "ng build muzika-intro -c production",
+    "build:intro:server": "ng build muzika-intro-server -c production",
+    "build:intro:webpack": "webpack --config ./config/webpack.config.js --mode production",
+    "serve:intro:server": "ENV=local node --experimental-modules dist/intro/server",
     "publish:core": "npm run build:core && npm publish dist/muzika-core/ --access=public",
     "test": "ng test",
     "lint": "ng lint",
@@ -27,30 +33,33 @@
   "nodeGypRebuild": "true",
   "dependencies": {
     "@angular-redux/store": "^9.0.0",
-    "@angular/animations": "^6.1.9",
+    "@angular/animations": "^6.1.10",
     "@angular/cdk": "^6.4.7",
-    "@angular/common": "^6.1.9",
-    "@angular/compiler": "^6.1.9",
-    "@angular/core": "^6.1.9",
-    "@angular/forms": "^6.1.9",
-    "@angular/http": "^6.1.9",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/forms": "^6.1.10",
+    "@angular/http": "^6.1.10",
     "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^6.1.9",
-    "@angular/platform-browser-dynamic": "^6.1.9",
-    "@angular/router": "^6.1.9",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/platform-server": "^6.1.10",
+    "@angular/router": "^6.1.10",
     "@angularclass/hmr": "^2.1.3",
     "@ionic-native/core": "^5.0.0-beta.21",
     "@ionic-native/native-storage": "^5.0.0-beta.21",
     "@ionic-native/splash-screen": "^5.0.0-beta.21",
     "@ionic-native/status-bar": "^5.0.0-beta.21",
-    "@ionic/angular": "^4.0.0-beta.12",
+    "@ionic/angular": "^4.0.0-beta.13",
     "@ionic/schematics-angular": "^1.0.7",
     "@ionic/storage": "^2.2.0",
-    "@ledgerhq/hw-transport-u2f": "^4.20.0",
-    "@ledgerhq/web3-subprovider": "^4.23.0",
+    "@ledgerhq/hw-transport-u2f": "^4.24.0",
+    "@ledgerhq/web3-subprovider": "^4.24.0",
     "@muzika/core": "*",
     "@ngrx/effects": "^6.1.0",
     "@ngrx/store": "^6.1.0",
+    "@nguniversal/express-engine": "^6.1.0",
+    "@nguniversal/module-map-ngfactory-loader": "^6.1.0",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "aes-js": "^3.1.1",
@@ -62,7 +71,7 @@
     "buffer": "^5.1.0",
     "chalk": "^2.4.1",
     "classlist.js": "^1.1.20150312",
-    "command-exists": "^1.2.7",
+    "command-exists": "^1.2.8",
     "cordova-android": "6.3.0",
     "cordova-ios": "4.5.4",
     "cordova-plugin-device": "^2.0.2",
@@ -71,8 +80,9 @@
     "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.3.3",
+    "cordova-sqlite-storage": "^2.5.0",
     "core-js": "^2.5.7",
+    "cors": "^2.8.4",
     "crypto-browserify": "^3.12.0",
     "deserialize-error": "0.0.3",
     "domino": "^2.1.0",
@@ -92,9 +102,10 @@
     "ngx-bootstrap": "^3.0.1",
     "ngx-uploader": "^6.1.0",
     "particles.js": "^2.0.0",
+    "pm2": "^3.2.2",
     "popper.js": "^1.14.3",
     "raven-js": "^3.27.0",
-    "redux": "^4.0.0",
+    "redux": "^4.0.1",
     "rxjs": "6.2.0",
     "rxjs-compat": "6.2.0",
     "safe-buffer": "^5.1.2",
@@ -112,11 +123,11 @@
   "devDependencies": {
     "@0xproject/types": "^0.6.1",
     "@0xproject/typescript-typings": "^0.3.2",
-    "@angular-devkit/build-angular": "^0.8.4",
-    "@angular-devkit/build-ng-packagr": "^0.8.4",
-    "@angular/cli": "^6.2.4",
-    "@angular/compiler-cli": "^6.1.9",
-    "@angular/language-service": "^6.1.9",
+    "@angular-devkit/build-angular": "^0.8.5",
+    "@angular-devkit/build-ng-packagr": "^0.8.5",
+    "@angular/cli": "^6.2.5",
+    "@angular/compiler-cli": "^6.1.10",
+    "@angular/language-service": "^6.1.10",
     "@types/jasmine": "^2.8.9",
     "@types/jasminewd2": "^2.0.5",
     "@types/node": "~8.9.4",
@@ -144,13 +155,14 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "lerna": "^2.11.0",
-    "ng-packagr": "^4.2.0",
+    "ng-packagr": "^4.3.1",
     "npm-run-all": "^4.1.3",
     "npx": "10.2.0",
     "prettier": "^1.14.3",
     "protractor": "^5.4.1",
     "replace": "^1.0.0",
     "solium": "git+https://github.com/duaraghav8/Solium.git#develop",
+    "string-replace-loader": "^2.1.1",
     "truffle": "^4.1.13",
     "ts-loader": "^4.4.2",
     "ts-node": "^7.0.1",
