--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "ethereumjs-util": "^5.2.0",
     "ethereumjs-wallet": "^0.6.0",
     "ethereumjs-wallet-browser": "^0.6.0",
+    "express": "^4.16.4",
     "froala-editor": "2.8.1",
     "fs-extra": "^5.0.0",
     "hash.js": "^1.1.5",
@@ -99,6 +100,7 @@
     "ipfs": "^0.31.7",
     "ipfs-api": "^22.3.0",
     "jquery": "^3.3.1",
+    "lru-cache": "^4.1.3",
     "ngx-bootstrap": "^3.0.1",
     "ngx-uploader": "^6.1.0",
     "particles.js": "^2.0.0",
