--- a/.ebextensions/npm-fix.config
+++ b/.ebextensions/npm-fix.config
@@ -1,3 +1,13 @@
 commands:
   01-command:
     command: '$(find /opt/elasticbeanstalk/node-install/*/bin | grep "npm$" | head -n1) config set ca ""'
+
+files:
+  "/opt/elasticbeanstalk/hooks/appdeploy/post/00_set_tmp_permissions.sh":
+    mode: "000755"
+    owner: root
+    group: root
+    content: |
+      #!/usr/bin/env bash
+      chown -R nodejs:nodejs /tmp/.npm
+
