--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -80,9 +80,9 @@ deploy:stage:
     - python -m pip install awscli
   script:
     - sh ./scripts/elb-deploy.sh
-#    - aws s3 sync ./dist/intro/ s3://$AWS_BUCKET --delete
-#    - aws cloudfront create-invalidation --distribution-id $CDN_DISTRIBUTION_ID --paths "/index.html" "/assets/i18n/*" "/assets/*.pdf"
-#    - aws cloudfront create-invalidation --distribution-id $CDN_DISTRIBUTION_ID_2 --paths "/index.html" "/assets/i18n/*" "/assets/*.pdf"
+    - aws s3 sync ./dist/intro/ s3://$AWS_BUCKET --delete
+    - aws cloudfront create-invalidation --distribution-id $CDN_DISTRIBUTION_ID --paths "/index.html" "/assets/i18n/*" "/assets/*.pdf"
+    - aws cloudfront create-invalidation --distribution-id $CDN_DISTRIBUTION_ID_2 --paths "/index.html" "/assets/i18n/*" "/assets/*.pdf"
   only:
     - master
   tags:
