--- a/package.json
+++ b/package.json
@@ -33,24 +33,24 @@
   "nodeGypRebuild": "true",
   "dependencies": {
     "@angular-redux/store": "^9.0.0",
-    "@angular/animations": "^6.1.10",
-    "@angular/cdk": "^6.4.7",
-    "@angular/common": "^6.1.10",
-    "@angular/compiler": "^6.1.10",
-    "@angular/core": "^6.1.10",
-    "@angular/forms": "^6.1.10",
-    "@angular/http": "^6.1.10",
-    "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^6.1.10",
-    "@angular/platform-browser-dynamic": "^6.1.10",
-    "@angular/platform-server": "^6.1.10",
-    "@angular/router": "^6.1.10",
+    "@angular/animations": "^7.0.2",
+    "@angular/cdk": "^7.0.2",
+    "@angular/common": "^7.0.2",
+    "@angular/compiler": "^7.0.2",
+    "@angular/core": "^7.0.2",
+    "@angular/forms": "^7.0.2",
+    "@angular/http": "^7.0.2",
+    "@angular/material": "^7.0.2",
+    "@angular/platform-browser": "^7.0.2",
+    "@angular/platform-browser-dynamic": "^7.0.2",
+    "@angular/platform-server": "^7.0.2",
+    "@angular/router": "^7.0.2",
     "@angularclass/hmr": "^2.1.3",
     "@ionic-native/core": "^5.0.0-beta.21",
     "@ionic-native/native-storage": "^5.0.0-beta.21",
     "@ionic-native/splash-screen": "^5.0.0-beta.21",
     "@ionic-native/status-bar": "^5.0.0-beta.21",
-    "@ionic/angular": "^4.0.0-beta.13",
+    "@ionic/angular": "^4.0.0-beta.15",
     "@ionic/schematics-angular": "^1.0.7",
     "@ionic/storage": "^2.2.0",
     "@ledgerhq/hw-transport-u2f": "^4.24.0",
@@ -58,10 +58,10 @@
     "@muzika/core": "*",
     "@ngrx/effects": "^6.1.0",
     "@ngrx/store": "^6.1.0",
-    "@nguniversal/express-engine": "^6.1.0",
-    "@nguniversal/module-map-ngfactory-loader": "^6.1.0",
-    "@ngx-translate/core": "^10.0.2",
-    "@ngx-translate/http-loader": "^3.0.1",
+    "@nguniversal/express-engine": "^7.0.2",
+    "@nguniversal/module-map-ngfactory-loader": "^7.0.2",
+    "@ngx-translate/core": "^11.0.0",
+    "@ngx-translate/http-loader": "^4.0.0",
     "aes-js": "^3.1.1",
     "alertify.js": "^1.0.12",
     "angular-froala-wysiwyg": "^2.8.5",
@@ -108,7 +108,7 @@
     "popper.js": "^1.14.3",
     "raven-js": "^3.27.0",
     "redux": "^4.0.1",
-    "rxjs": "6.2.0",
+    "rxjs": "6.3.3",
     "rxjs-compat": "6.2.0",
     "safe-buffer": "^5.1.2",
     "serialize-error": "^2.1.0",
@@ -117,19 +117,19 @@
     "tempfile": "^2.0.0",
     "truffle-contract": "^3.0.6",
     "vm-browserify": "^1.1.0",
-    "web3": "^0.20.6",
+    "web3": "0.20.6",
     "web3-provider-engine": "^14.1.0",
     "zcash-bitcore-lib": "git+https://github.com/MuzikaFoundation/zcash-bitcore-lib.git",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@0xproject/types": "^0.6.1",
-    "@0xproject/typescript-typings": "^0.3.2",
-    "@angular-devkit/build-angular": "^0.8.5",
-    "@angular-devkit/build-ng-packagr": "^0.8.5",
-    "@angular/cli": "^6.2.5",
-    "@angular/compiler-cli": "^6.1.10",
-    "@angular/language-service": "^6.1.10",
+    "@0xproject/types": "0.6.1",
+    "@0xproject/typescript-typings": "0.3.2",
+    "@angular-devkit/build-angular": "^0.10.4",
+    "@angular-devkit/build-ng-packagr": "^0.10.4",
+    "@angular/cli": "^7.0.4",
+    "@angular/compiler-cli": "^7.0.2",
+    "@angular/language-service": "^7.0.2",
     "@types/jasmine": "^2.8.9",
     "@types/jasminewd2": "^2.0.5",
     "@types/node": "~8.9.4",
@@ -165,11 +165,11 @@
     "replace": "^1.0.0",
     "solium": "git+https://github.com/duaraghav8/Solium.git#develop",
     "string-replace-loader": "^2.1.1",
-    "truffle": "^4.1.13",
-    "ts-loader": "^4.4.2",
+    "truffle": "^4.1.14",
+    "ts-loader": "^5.3.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "typescript": "2.7.2",
+    "typescript": "3.1.6",
     "wait-on": "^2.1.2",
     "webpack-cli": "^3.1.2"
   },
