--- a/package.json
+++ b/package.json
@@ -168,6 +168,7 @@
     "truffle": "^4.1.14",
     "ts-loader": "^5.3.0",
     "ts-node": "^7.0.1",
+    "tsickle": "^0.33.1",
     "tslint": "^5.11.0",
     "typescript": "3.1.6",
     "wait-on": "^2.1.2",
