--- a/package.json
+++ b/package.json
@@ -33,18 +33,18 @@
   "nodeGypRebuild": "true",
   "dependencies": {
     "@angular-redux/store": "^9.0.0",
-    "@angular/animations": "^7.0.2",
-    "@angular/cdk": "^7.0.2",
-    "@angular/common": "^7.0.2",
-    "@angular/compiler": "^7.0.2",
-    "@angular/core": "^7.0.2",
-    "@angular/forms": "^7.0.2",
-    "@angular/http": "^7.0.2",
-    "@angular/material": "^7.0.2",
-    "@angular/platform-browser": "^7.0.2",
-    "@angular/platform-browser-dynamic": "^7.0.2",
-    "@angular/platform-server": "^7.0.2",
-    "@angular/router": "^7.0.2",
+    "@angular/animations": "^7.0.4",
+    "@angular/cdk": "^7.0.4",
+    "@angular/common": "^7.0.4",
+    "@angular/compiler": "^7.0.4",
+    "@angular/core": "^7.0.4",
+    "@angular/forms": "^7.0.4",
+    "@angular/http": "^7.0.4",
+    "@angular/material": "^7.0.4",
+    "@angular/platform-browser": "^7.0.4",
+    "@angular/platform-browser-dynamic": "^7.0.4",
+    "@angular/platform-server": "^7.0.4",
+    "@angular/router": "^7.0.4",
     "@angularclass/hmr": "^2.1.3",
     "@ionic-native/core": "^5.0.0-beta.21",
     "@ionic-native/native-storage": "^5.0.0-beta.21",
@@ -101,15 +101,15 @@
     "ipfs-api": "^22.3.0",
     "jquery": "^3.3.1",
     "lru-cache": "^4.1.3",
-    "ngx-bootstrap": "^3.0.1",
-    "ngx-uploader": "^6.1.0",
+    "ngx-bootstrap": "^3.1.1",
+    "ngx-uploader": "^7.0.0",
     "particles.js": "^2.0.0",
     "pm2": "^3.2.2",
     "popper.js": "^1.14.3",
     "raven-js": "^3.27.0",
     "redux": "^4.0.1",
     "rxjs": "6.3.3",
-    "rxjs-compat": "6.2.0",
+    "rxjs-compat": "^6.3.3",
     "safe-buffer": "^5.1.2",
     "serialize-error": "^2.1.0",
     "stream-browserify": "^2.0.1",
@@ -125,11 +125,11 @@
   "devDependencies": {
     "@0xproject/types": "0.6.1",
     "@0xproject/typescript-typings": "0.3.2",
-    "@angular-devkit/build-angular": "^0.10.4",
-    "@angular-devkit/build-ng-packagr": "^0.10.4",
-    "@angular/cli": "^7.0.4",
-    "@angular/compiler-cli": "^7.0.2",
-    "@angular/language-service": "^7.0.2",
+    "@angular-devkit/build-angular": "^0.10.6",
+    "@angular-devkit/build-ng-packagr": "^0.10.6",
+    "@angular/cli": "^7.0.6",
+    "@angular/compiler-cli": "^7.0.4",
+    "@angular/language-service": "^7.0.4",
     "@types/jasmine": "^2.8.9",
     "@types/jasminewd2": "^2.0.5",
     "@types/node": "~8.9.4",
@@ -157,7 +157,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "lerna": "^2.11.0",
-    "ng-packagr": "^4.3.1",
+    "ng-packagr": "^4.4.0",
     "npm-run-all": "^4.1.3",
     "npx": "10.2.0",
     "prettier": "^1.14.3",
