--- a/package.json
+++ b/package.json
@@ -103,6 +103,8 @@
     "lru-cache": "^4.1.3",
     "ngx-bootstrap": "^3.1.1",
     "ngx-uploader": "^7.0.0",
+    "ontology-dapi": "^0.4.5",
+    "ontology-ts-sdk": "^1.0.7",
     "particles.js": "^2.0.0",
     "pm2": "^3.2.2",
     "popper.js": "^1.14.3",
