--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "classlist.js": "^1.1.20150312",
     "command-exists": "^1.2.8",
     "cordova-android": "6.3.0",
-    "cordova-ios": "4.5.4",
+    "cordova-ios": "^4.5.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^1.2.1",
@@ -97,7 +97,7 @@
     "hash.js": "^1.1.5",
     "hls.js": "^0.9.1",
     "imagemagick": "^0.1.3",
-    "ipfs": "^0.31.7",
+    "ipfs": "^0.33.1",
     "ipfs-api": "^22.3.0",
     "jquery": "^3.3.1",
     "lru-cache": "^4.1.3",
