--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "cors": "^2.8.4",
     "crypto-browserify": "^3.12.0",
     "domino": "^2.1.0",
+    "ethereumjs-wallet-browser": "^0.6.0",
     "express": "^4.16.4",
     "froala-editor": "2.8.1",
     "fs-extra": "^5.0.0",
